feat: Added a pre-commit hook with automated checks

--- a/notebooks/spatial_pdp_demo.ipynb
+++ b/notebooks/spatial_pdp_demo.ipynb
@@ -82,10 +82,10 @@
     "np.random.seed(42)\n",
     "n_samples = 10_000\n",
     "\n",
-    "regions = np.random.choice(gdf['NAME_1'].values, size=n_samples)\n",
+    "regions = np.random.choice(gdf[\"NAME_1\"].values, size=n_samples)\n",
     "coords = []\n",
     "for region in regions:\n",
-    "    geom = gdf[gdf['NAME_1'] == region].geometry.iloc[0]\n",
+    "    geom = gdf[gdf[\"NAME_1\"] == region].geometry.iloc[0]\n",
     "    point = geom.representative_point()\n",
     "    # Add noise around the centroid\n",
     "    lon = point.x + np.random.normal(0, 0.5)\n",
@@ -94,52 +94,56 @@
     "\n",
     "coords = np.array(coords)\n",
     "\n",
-    "df = pd.DataFrame({\n",
-    "    'longitude': coords[:, 0],\n",
-    "    'latitude': coords[:, 1],\n",
-    "    'region': regions,\n",
-    "    'age': np.random.randint(18, 80, size=n_samples),\n",
-    "    'is_male': np.random.binomial(1, 0.5, size=n_samples),\n",
-    "})\n",
+    "df = pd.DataFrame(\n",
+    "    {\n",
+    "        \"longitude\": coords[:, 0],\n",
+    "        \"latitude\": coords[:, 1],\n",
+    "        \"region\": regions,\n",
+    "        \"age\": np.random.randint(18, 80, size=n_samples),\n",
+    "        \"is_male\": np.random.binomial(1, 0.5, size=n_samples),\n",
+    "    }\n",
+    ")\n",
+    "\n",
     "\n",
     "def generate_disease_risk(row):\n",
     "    \"\"\"Generate disease with SHARP geographic boundary.\"\"\"\n",
-    "    \n",
+    "\n",
     "    lat = row[\"latitude\"]\n",
     "    lon = row[\"longitude\"]\n",
-    "    \n",
+    "\n",
     "    # Define the diagonal line endpoints\n",
     "    x1, y1 = 29, -12\n",
     "    x2, y2 = 41, -0.5\n",
-    "    \n",
+    "\n",
     "    # Compute distance from point to the line\n",
-    "    num = (y2 - y1)*lon - (x2 - x1)*lat + x2*y1 - y2*x1\n",
-    "    den = np.sqrt((y2 - y1)**2 + (x2 - x1)**2)\n",
+    "    num = (y2 - y1) * lon - (x2 - x1) * lat + x2 * y1 - y2 * x1\n",
+    "    den = np.sqrt((y2 - y1) ** 2 + (x2 - x1) ** 2)\n",
     "    distance = np.abs(num / den)\n",
-    "    \n",
+    "\n",
     "    if distance < 0.7:\n",
     "        geo_risk = 0.99\n",
     "    elif distance < 1:\n",
-    "        geo_risk = (1-distance)/0.3\n",
+    "        geo_risk = (1 - distance) / 0.3\n",
     "    else:\n",
     "        geo_risk = 0.01\n",
-    "    \n",
+    "\n",
     "    # Add tiny age/gender effects\n",
-    "    age_effect = (row['age'] - 50) * 0.001\n",
-    "    gender_effect = (row['is_male'] == 1) * 0.01\n",
-    "    \n",
+    "    age_effect = (row[\"age\"] - 50) * 0.001\n",
+    "    gender_effect = (row[\"is_male\"] == 1) * 0.01\n",
+    "\n",
     "    risk = geo_risk + age_effect + gender_effect\n",
     "\n",
     "    return np.clip(risk, 0, 1)\n",
     "\n",
+    "\n",
     "# Generate labels\n",
-    "df['disease_prob'] = df.apply(generate_disease_risk, axis=1)\n",
+    "df[\"disease_prob\"] = df.apply(generate_disease_risk, axis=1)\n",
     "\n",
     "# Deterministic labels for high accuracy demonstration\n",
-    "df['has_disease'] = np.random.binomial(1, df['disease_prob'])\n",
+    "df[\"has_disease\"] = np.random.binomial(1, df[\"disease_prob\"])\n",
     "\n",
     "print(f\"Disease prevalence: {df['has_disease'].mean():.1%}\")\n",
-    "df[['longitude', 'latitude', 'age', 'disease_prob', 'has_disease']].head()"
+    "df[[\"longitude\", \"latitude\", \"age\", \"disease_prob\", \"has_disease\"]].head()"
    ]
   },
   {
@@ -161,29 +165,39 @@
     "plt.figure(figsize=(12, 5))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
-    "scatter = plt.scatter(df['longitude'], df['latitude'], \n",
-    "                     c=df['disease_prob'], cmap='RdYlGn_r', \n",
-    "                     alpha=0.5, s=1)\n",
-    "plt.colorbar(scatter, label='Disease Probability')\n",
-    "plt.xlabel('Longitude')\n",
-    "plt.ylabel('Latitude')\n",
-    "plt.title('True Disease Risk (Continuous)')\n",
+    "scatter = plt.scatter(\n",
+    "    df[\"longitude\"],\n",
+    "    df[\"latitude\"],\n",
+    "    c=df[\"disease_prob\"],\n",
+    "    cmap=\"RdYlGn_r\",\n",
+    "    alpha=0.5,\n",
+    "    s=1,\n",
+    ")\n",
+    "plt.colorbar(scatter, label=\"Disease Probability\")\n",
+    "plt.xlabel(\"Longitude\")\n",
+    "plt.ylabel(\"Latitude\")\n",
+    "plt.title(\"True Disease Risk (Continuous)\")\n",
     "\n",
     "# Draw the diagonal line\n",
     "x_line = [29, 41]\n",
     "y_line = [-12, -0.5]\n",
-    "plt.plot(x_line, y_line, 'b--', linewidth=2, label='Boundary')\n",
+    "plt.plot(x_line, y_line, \"b--\", linewidth=2, label=\"Boundary\")\n",
     "plt.legend()\n",
     "\n",
     "plt.subplot(1, 2, 2)\n",
-    "scatter = plt.scatter(df['longitude'], df['latitude'], \n",
-    "                     c=df['has_disease'], cmap='RdYlGn_r', \n",
-    "                     alpha=0.5, s=1)\n",
-    "plt.colorbar(scatter, label='Has Disease')\n",
-    "plt.xlabel('Longitude')\n",
-    "plt.ylabel('Latitude')\n",
-    "plt.title('True Disease Status (Binary)')\n",
-    "plt.plot(x_line, y_line, 'b--', linewidth=2, label='Boundary')\n",
+    "scatter = plt.scatter(\n",
+    "    df[\"longitude\"],\n",
+    "    df[\"latitude\"],\n",
+    "    c=df[\"has_disease\"],\n",
+    "    cmap=\"RdYlGn_r\",\n",
+    "    alpha=0.5,\n",
+    "    s=1,\n",
+    ")\n",
+    "plt.colorbar(scatter, label=\"Has Disease\")\n",
+    "plt.xlabel(\"Longitude\")\n",
+    "plt.ylabel(\"Latitude\")\n",
+    "plt.title(\"True Disease Status (Binary)\")\n",
+    "plt.plot(x_line, y_line, \"b--\", linewidth=2, label=\"Boundary\")\n",
     "plt.legend()\n",
     "\n",
     "plt.tight_layout()\n",
@@ -206,23 +220,25 @@
    "outputs": [],
    "source": [
     "# Features and target\n",
-    "feature_cols = ['longitude', 'latitude', 'age', 'is_male']\n",
+    "feature_cols = [\"longitude\", \"latitude\", \"age\", \"is_male\"]\n",
     "X = df[feature_cols]\n",
-    "y = df['has_disease']\n",
+    "y = df[\"has_disease\"]\n",
     "\n",
     "# Split\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)\n",
     "\n",
     "# Train pipeline\n",
-    "pipe = Pipeline([\n",
-    "    ('scaler', StandardScaler()),\n",
-    "    ('clf', HistGradientBoostingClassifier(\n",
-    "        max_iter=200,\n",
-    "        learning_rate=0.1,\n",
-    "        max_depth=8,\n",
-    "        random_state=42\n",
-    "    ))\n",
-    "])\n",
+    "pipe = Pipeline(\n",
+    "    [\n",
+    "        (\"scaler\", StandardScaler()),\n",
+    "        (\n",
+    "            \"clf\",\n",
+    "            HistGradientBoostingClassifier(\n",
+    "                max_iter=200, learning_rate=0.1, max_depth=8, random_state=42\n",
+    "            ),\n",
+    "        ),\n",
+    "    ]\n",
+    ")\n",
     "\n",
     "pipe.fit(X_train, y_train)\n",
     "\n",
@@ -249,29 +265,19 @@
     "\n",
     "# Longitude PDP\n",
     "PartialDependenceDisplay.from_estimator(\n",
-    "    pipe, \n",
-    "    X_test, \n",
-    "    features=['longitude'], \n",
-    "    ax=axes[0], \n",
-    "    kind='average',\n",
-    "    grid_resolution=50\n",
+    "    pipe, X_test, features=[\"longitude\"], ax=axes[0], kind=\"average\", grid_resolution=50\n",
     ")\n",
-    "axes[0].set_title('Partial Dependence: Longitude', fontsize=14)\n",
-    "axes[0].set_ylabel('Predicted Disease Probability', fontsize=12)\n",
-    "axes[0].set_xlabel('Longitude', fontsize=12)\n",
+    "axes[0].set_title(\"Partial Dependence: Longitude\", fontsize=14)\n",
+    "axes[0].set_ylabel(\"Predicted Disease Probability\", fontsize=12)\n",
+    "axes[0].set_xlabel(\"Longitude\", fontsize=12)\n",
     "\n",
     "# Latitude PDP\n",
     "PartialDependenceDisplay.from_estimator(\n",
-    "    pipe, \n",
-    "    X_test, \n",
-    "    features=['latitude'], \n",
-    "    ax=axes[1], \n",
-    "    kind='average',\n",
-    "    grid_resolution=50\n",
+    "    pipe, X_test, features=[\"latitude\"], ax=axes[1], kind=\"average\", grid_resolution=50\n",
     ")\n",
-    "axes[1].set_title('Partial Dependence: Latitude', fontsize=14)\n",
-    "axes[1].set_ylabel('Predicted Disease Probability', fontsize=12)\n",
-    "axes[1].set_xlabel('Latitude', fontsize=12)\n",
+    "axes[1].set_title(\"Partial Dependence: Latitude\", fontsize=14)\n",
+    "axes[1].set_ylabel(\"Predicted Disease Probability\", fontsize=12)\n",
+    "axes[1].set_xlabel(\"Latitude\", fontsize=12)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -313,13 +319,13 @@
     "    X_test,\n",
     "    features=[(0, 1)],  # longitude and latitude interaction\n",
     "    ax=ax,\n",
-    "    kind='average',\n",
-    "    grid_resolution=50\n",
+    "    kind=\"average\",\n",
+    "    grid_resolution=50,\n",
     ")\n",
     "\n",
-    "ax.set_title('2D Partial Dependence: Longitude x Latitude', fontsize=14, pad=20)\n",
-    "ax.set_xlabel('Longitude', fontsize=12)\n",
-    "ax.set_ylabel('Latitude', fontsize=12)\n",
+    "ax.set_title(\"2D Partial Dependence: Longitude x Latitude\", fontsize=14, pad=20)\n",
+    "ax.set_xlabel(\"Longitude\", fontsize=12)\n",
+    "ax.set_ylabel(\"Latitude\", fontsize=12)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -360,7 +366,7 @@
     "    X_test,\n",
     "    pipe,\n",
     "    col_index_to_predict=1,  # Probability of disease (class 1)\n",
-    "    geojson_path=TANZANIA_GEOJSON\n",
+    "    geojson_path=TANZANIA_GEOJSON,\n",
     ")\n",
     "\n",
     "pdp_results.head()"
@@ -376,8 +382,8 @@
     "fig = plot_geopdp(\n",
     "    pdp_results,\n",
     "    geojson=TANZANIA_GEOJSON,\n",
-    "    region_col='region',\n",
-    "    title='Predicted Disease Risk by Region (Spatial PDP)'\n",
+    "    region_col=\"region\",\n",
+    "    title=\"Predicted Disease Risk by Region (Spatial PDP)\",\n",
     ")\n",
     "\n",
     "fig.show()"
@@ -416,17 +422,11 @@
     "from geopdp.visualization import compare_geojson_geometry\n",
     "\n",
     "# Simplify\n",
-    "simplified_gdf = simplify_geojson(\n",
-    "    TANZANIA_GEOJSON,\n",
-    "    tolerance=0.05,\n",
-    "    precision=0.001\n",
-    ")\n",
+    "simplified_gdf = simplify_geojson(TANZANIA_GEOJSON, tolerance=0.05, precision=0.001)\n",
     "\n",
     "# Compare\n",
     "fig = compare_geojson_geometry(\n",
-    "    TANZANIA_GEOJSON,\n",
-    "    simplified_gdf,\n",
-    "    title='Geometry Simplification Comparison'\n",
+    "    TANZANIA_GEOJSON, simplified_gdf, title=\"Geometry Simplification Comparison\"\n",
     ")\n",
     "fig.show()"
    ]
