--- a/notebooks/spatial_pdp_demo.ipynb
+++ b/notebooks/spatial_pdp_demo.ipynb
@@ -367,6 +367,10 @@
     "    pipe,\n",
     "    col_index_to_predict=1,  # Probability of disease (class 1)\n",
     "    geojson_path=TANZANIA_GEOJSON,\n",
+    "    region_col=\"region\",\n",
+    "    geojson_region_property=\"NAME_1\",\n",
+    "    lon_col=\"longitude\",\n",
+    "    lat_col=\"latitude\",\n",
     ")\n",
     "\n",
     "pdp_results.head()"
@@ -383,6 +387,8 @@
     "    pdp_results,\n",
     "    geojson=TANZANIA_GEOJSON,\n",
     "    region_col=\"region\",\n",
+    "    geojson_region_property=\"NAME_1\",\n",
+    "    color_scale=\"Viridis\",\n",
     "    title=\"Predicted Disease Risk by Region (Spatial PDP)\",\n",
     ")\n",
     "\n",
@@ -463,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
